# MockOS

./: README.md  ong-fr-ts-pmo.txt
docs/: lab5.md  studio16.md  studio17.md  studio18.md  studio19.md  studio20.md  studio21.md
include/mockos/: AbstractCommand.h  AbstractFile.h  AbstractFileFactory.h  AbstractFileSystem.h  AbstractFileVisitor.h  AbstractParsingStrategy.h  BasicDisplayVisitor.h  CatCommand.h  CommandPrompt.h  Constants.h  CopyCommand.h  DisplayCommand.h  ImageFile.h  LSCommand.h  Lab5Tests.h  MacroCommand.h  MetadataDisplayVisitor.h  PasswordProxy.h  RemoveCommand.h  RenameMacro.h  RenameParsingStrategy.h  SimpleFileFactory.h  SimpleFileSystem.h  TextFile.h  TouchCommand.h  TouchEditMacro.h  TouchEditMarco.h  TouchEditParsingStrategy.h
lib/mockos/: AbstractFile.cpp  BasicDisplayVisitor.cpp  CMakeLists.txt  CatCommand.cpp  CommandPrompt.cpp  CopyCommand.cpp  DisplayCommand.cpp  ImageFile.cpp  LSCommand.cpp  Lab5Tests.cpp  MacroCommand.cpp  MetadataDisplayVisitor.cpp  PasswordProxy.cpp  RemoveCommand.cpp  RenameMacro.cpp  RenameParsingStrategy.cpp  SimpleFileFactory.cpp  SimpleFileSystem.cpp  TextFile.cpp  TouchCommand.cpp  TouchEditMacro.cpp
src/: CMakeLists.txt  Lab5.cpp  Studio16.cpp  Studio17.cpp  Studio18.cpp  Studio19.cpp  Studio20.cpp  Studio21.cpp
tests/: CMakeLists.txt
